[gd_scene load_steps=2 format=3 uid="uid://cook_game_scene"]

[ext_resource type="Script" path="res://scripts/cook/cook_ui.gd" id="1"]

[node name="CookGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.25, 1)

[node name="PanContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0 
offset_top = -250.0 
offset_right = 300.0  
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanTexture" type="TextureRect" parent="PanContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="PrepPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -250.0
offset_right = 320.0
offset_bottom = 250.0
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="PrepPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="PrepPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "食材准备"
horizontal_alignment = 1

[node name="AddIngredientButton" type="Button" parent="PrepPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "添加食材"

[node name="ScrollContainer" type="ScrollContainer" parent="PrepPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Grid" type="GridContainer" parent="PrepPanel/VBox/ScrollContainer"]
layout_mode = 2
columns = 4

[node name="ControlPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -200.0
offset_right = -30.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="ControlPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="ControlPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "控制"
horizontal_alignment = 1

[node name="HeatLabel" type="Label" parent="ControlPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "火力: 50%"
horizontal_alignment = 1

[node name="HeatSlider" type="HSlider" parent="ControlPanel/VBox"]
layout_mode = 2
min_value = 0.0
max_value = 100.0
step = 1.0
value = 50.0

[node name="ServeButton" type="Button" parent="ControlPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "出锅"

[node name="CloseButton" type="Button" parent="ControlPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "关闭"

